--- a/wiki-project/views/wiki/index.ejs
+++ b/wiki-project/views/wiki/index.ejs
@@ -4,9 +4,9 @@
       <meta charset="utf-8">
 
       <!--Mobile Device Optimization -->
-      <meta name="viewport" content="width-device-width, initial-scale=1.0"/>
+      <!-- <meta name="viewport" content="width-device-width, initial-scale=1.0"/> -->
 
-      <title>Wiki 2.0!</title>
+      <title>Wiki</title>
 
       <!-- Materialize CSS Links -->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -25,6 +25,12 @@
       <script src="js/app.js"></script>
   </head>
   <body>
-
+    <h1>WIKI</h1>
+        <form action="/wiki" method="GET">
+              <input placeholder="Search"></input>
+              <button>SUBMIT!</button>
+        </form>
+      <% }); %>
+    </div>
   </body>
 </html>
