--- a/wiki-project/views/wiki/index.ejs
+++ b/wiki-project/views/wiki/index.ejs
@@ -25,12 +25,21 @@
       <script src="js/app.js"></script>
   </head>
   <body>
-    <h1>WIKI</h1>
+    <main>
+      <header>
         <form action="/wiki" method="GET">
-              <input placeholder="Search"></input>
-              <button>SUBMIT!</button>
+          <input placeholder="Search"></input>
+          <button>SUBMIT!</button>
         </form>
-      <% }); %>
-    </div>
+    <h1>WIKI</h1>
+      <% wiki.forEach(wiki => { %>
+          <div class="title">
+            <p><%= wiki.title %></p>
+            <p><%= wiki.category %></p>
+            <p><%= wiki.content %></p>
+          </div>
+        <% }) %>
+      <header>
+    </main>
   </body>
 </html>
