--- a/wiki-project/views/wiki/show.ejs
+++ b/wiki-project/views/wiki/show.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
       <meta charset="utf-8">
@@ -36,4 +36,4 @@
       <% }); %>
     </div>
   </body>
-</html>
+</html> -->
