--- a/wiki-project/views/wiki/index.ejs
+++ b/wiki-project/views/wiki/index.ejs
@@ -2,44 +2,57 @@
 <html>
   <head>
       <meta charset="utf-8">
-
       <!--Mobile Device Optimization -->
       <!-- <meta name="viewport" content="width-device-width, initial-scale=1.0"/> -->
-
-      <title>Wiki</title>
-
+      <title>Wiki 2.0</title>
       <!-- Materialize CSS Links -->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link rel="stylesheet" href="libraries/materialize/css/materialize.min.css" />
-
+      <link rel="stylesheet" href="/libraries/materialize/css/materialize.min.css" />
       <!-- App Styles -->
-      <link rel="stylesheet" href="css/style.css" />
-
+      <link rel="stylesheet" href="/css/style.css" />
       <!-- jQuery -->
-      <script src="libraries/jquery/jquery.min.js"></script>
-
+      <script src="/libraries/jquery/jquery.min.js"></script>
       <!-- Materialize JS -->
       <script src="libraries/materialize/js/materialize.min.js"></script>
-
-      <!-- APP JS -->
+      <!-- Application JS -->
       <script src="js/app.js"></script>
   </head>
   <body>
-    <main>
-      <header>
-        <form action="/wiki" method="GET">
-          <input placeholder="Search"></input>
-          <button>SUBMIT!</button>
-        </form>
-    <h1>WIKI</h1>
-      <% wiki.forEach(wiki => { %>
-          <div class="title">
-            <p><%= wiki.title %></p>
-            <p><%= wiki.category %></p>
-            <p><%= wiki.content %></p>
+    <nav>
+    </nav>
+    <!-- <div class="container"> -->
+      <div class="row">
+<!--Below is col s12 m4 l2 - The fist column on the index page-->
+        <div class="col s12 m4 l2">
+          <h1>WIKI 2.0</h1>
+            <div id="top-categories">
+              <h2>Top Categories</h2>
+            </div>
+        </div>
+<!-- Below is column s6 - The middle column on the index page-->
+        <div class="col s12 m4 l8">
+          <% wiki.forEach(wiki => { %>
+            <div class="title">
+                <p>Title:<%= wiki.title %></p>
+                <p>Category:<%= wiki.category %></p>
+                <p>Content:<%= wiki.content %></p>
+            </div>
+          <% }) %>
+<!-- Below is the input (search bar) and the submit button -->
+          <form action="/wiki" method="GET">
+            <input placeholder="Search"></input>
+            <button>SUBMIT!</button>
+          </form>
+          <div>
+            <h2>Trending Articles</h2>
           </div>
-        <% }) %>
-      <header>
-    </main>
+ <!-- Below is the ending div for col s12 m4 l8 -->
+        </div>
+        <div class="col s12 m4 l2">
+          <p>Saved Categories</p>
+        </div>
+<!-- Below is the ending div for the row -->
+      </div>
+    <!-- </div> -->
   </body>
 </html>
