--- a/wiki-project/views/wiki/new.ejs
+++ b/wiki-project/views/wiki/new.ejs
@@ -2,44 +2,51 @@
 <html>
   <head>
       <meta charset="utf-8">
-
       <!--Mobile Device Optimization -->
-      <meta name="viewport" content="width-device-width, initial-scale=1.0"/>
-
-      <title>Wiki 2.0!</title>
-
+      <!-- <meta name="viewport" content="width-device-width, initial-scale=1.0"/> -->
+      <title>Wiki 2.0</title>
       <!-- Materialize CSS Links -->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link rel="stylesheet" href="libraries/materialize/css/materialize.min.css" />
-
       <!-- App Styles -->
-      <link rel="stylesheet" href="css/style.css" />
-
+      <link rel="stylesheet" href="/css/style.css" />
       <!-- jQuery -->
-      <script src="libraries/jquery/jquery.min.js"></script>
-
+      <script src="/libraries/jquery/jquery.min.js"></script>
       <!-- Materialize JS -->
-      <script src="libraries/materialize/js/materialize.min.js"></script>
-
-      <!-- APP JS -->
-      <script src="js/app.js"></script>
+      <script src="/libraries/materialize/js/materialize.min.js"></script>
+      <!-- Application JS -->
+      <script src="/js/app.js"></script>
   </head>
   <body>
-    <main>
-      <header>
-        <h1>ADD NEW WIKI POST</h1>
-      </header>
-      <section>
-      <form action="/wiki" method="POST">
-        <!-- <label for="wiki[title]">POST Title:</label><br> -->
-        <input type="text" name="wiki[title]" placeholder="Post Title!"><br>
-        <input type="text" name="wiki[category]" placeholder="Post Category!"><br>
-        <input type="text" name="wiki[content]" placeholder="Insert Content!"><br>
-        <!-- <input type="text" name="wiki[date_created]" placeholder="Date Created!"><br> -->
-        <!-- <input type="text" name="wiki[date_updated]" placeholder="Date Updated!"><br> -->
-        <input type="submit" value="ADD NEW POST">
-      </form>
-      </section>
-    </main>
-    </body>
-    </html>
+    <nav>
+    </nav>
+    <!-- <div class="container"> -->
+      <div class="row">
+<!--Below is col s12 m4 l2 - The fist column on the new page-->
+        <div class="col s12 m4 l2">
+          <h1>WIKI 2.0</h1>
+            <div id="top-categories">
+              <h2>Top Categories</h2>
+            </div>
+        </div>
+<!-- Below is col s12 m8 l10 - The right hand column on the new page-->
+        <div class="col s12 m8 l10">
+          <header>
+            <h1>ADD NEW WIKI POST</h1>
+          </header>
+          <section>
+          <form action="/wiki" method="POST">
+            <!-- <label for="wiki[title]">POST Title:</label><br> -->
+            <input type="text" name="wiki[title]" placeholder="Post Title!"><br>
+            <input type="text" name="wiki[category]" placeholder="Post Category!"><br>
+            <input type="text" name="wiki[content]" placeholder="Insert Content!"><br>
+            <!-- <input type="text" name="wiki[date_created]" placeholder="Date Created!"><br> -->
+            <!-- <input type="text" name="wiki[date_updated]" placeholder="Date Updated!"><br> -->
+            <input type="submit" value="ADD NEW POST">
+          </form>
+          </section>
+<!-- Below is the ending div for the row -->
+      </div>
+    </div>
+  </body>
+</html>
