--- a/wiki-project/views/wiki/index.ejs
+++ b/wiki-project/views/wiki/index.ejs
@@ -14,7 +14,7 @@
       <!-- App Styles -->
       <!--Connecting Javascript to JQuery -->
       <!-- jQuery -->
-      <script src="/js/app.js"></script>
+      <!-- <script src="/js/app.js"></script> -->
       <!-- Materialize JS -->
       <!-- <script src="./js/main.js"></script> -->
       <!-- Application JS -->
