--- a/wiki-project/views/wiki/index.ejs
+++ b/wiki-project/views/wiki/index.ejs
@@ -14,7 +14,7 @@
       <!-- App Styles -->
       <!--Connecting Javascript to JQuery -->
       <!-- jQuery -->
-      <!-- <script src="/js/app.js"></script> -->
+      <script src="/js/app.js"></script>
       <!-- Materialize JS -->
       <!-- <script src="./js/main.js"></script> -->
       <!-- Application JS -->
@@ -25,7 +25,7 @@
     <nav>
     </nav>
     <!-- <div class="container"> -->
-      <div class="row">
+      <div class="row" id="#index-box">
 <!--Below is col s12 m4 l2 - The fist column on the index page-->
         <div class="col s12 m4 l2">
           <h1>WIKI 2.0</h1>
@@ -34,11 +34,14 @@
             </div>
         </div>
 <!-- Below is column s6 - The middle column on the index page-->
-    <form method="GET" action='/wiki/category' id="theForm">
+    <form method="GET" action='/' id="theForm">
       <div class="input-field">
         <select name="wiki[category]" id="selector">
+          <option id="tech-category" value="Tech" name="wiki[category.tech]">Tech</option>
+          <option id="style-category" value="Style" name="wiki[category.style]">Style</option>
           <option id="food-category" value="Food" name="wiki[category.food]">Food</option>
-          <option id="location-category" value="Location" name="wiki[category.location]">Location</option>
+          <option id="travel-category" value="Travel" name="wiki[category.travel]">Travel</option>
+
           <!-- <input></input> -->
           <input id="input-field" placeholder="enter"></input>
         </select>
