--- a/wiki-project/views/wiki/new.ejs
+++ b/wiki-project/views/wiki/new.ejs
@@ -41,6 +41,8 @@
             <select name="wiki[category]">
               <option name="wiki[category.food]">Food</option>
               <option name="wiki[category.location]">Location</option>
+              <option name="wiki[category.style]">Style</option>
+              <option name="wiki[category.style]">Travel</option>
             </select>
             <input type="text" name="wiki[content]" placeholder="Insert Content!"><br>
             <!-- <input type="text" name="wiki[date_created]" placeholder="Date Created!"><br> -->
