--- a/wiki-project/views/wiki/show.ejs
+++ b/wiki-project/views/wiki/show.ejs
@@ -24,6 +24,10 @@
       <div class="row">
 <!--Below is col s12 m4 l2 - The fist column on the new page-->
         <div class="col s12 m4 l2">
+          <%= wiki.title %>
+          <!-- <% wiki.forEach(wiki => { %>
+            <p>Category:<%= wiki.category.food %></p>
+            <% }) %> -->
           <h1>WIKI SHOW PAGE</h1>
         </div>
 <!-- Below is the ending div for the row -->
