--- a/wiki-project/views/wiki/new.ejs
+++ b/wiki-project/views/wiki/new.ejs
@@ -39,10 +39,10 @@
             <!-- <label for="wiki[title]">POST Title:</label><br> -->
             <input type="text" name="wiki[title]" placeholder="Post Title!"><br>
             <select name="wiki[category]">
-              <option name="wiki[category.food]">Food</option>
-              <option name="wiki[category.location]">Location</option>
-              <option name="wiki[category.style]">Style</option>
-              <option name="wiki[category.style]">Travel</option>
+              <option name="wiki[category.food]">food</option>
+              <option name="wiki[category.tech]">tech</option>
+              <option name="wiki[category.style]">style</option>
+              <option name="wiki[category.travel]">Travel</option>
             </select>
             <input type="text" name="wiki[content]" placeholder="Insert Content!"><br>
             <!-- <input type="text" name="wiki[date_created]" placeholder="Date Created!"><br> -->
