--- a/wiki-project/views/wiki/index.ejs
+++ b/wiki-project/views/wiki/index.ejs
@@ -24,18 +24,23 @@
   <body>
     <nav>
     </nav>
+
     <!-- <div class="container"> -->
       <div class="row" id="#index-box">
-<!--Below is col s12 m4 l2 - The fist column on the index page-->
         <div class="col s12 m4 l2">
           <h1>WIKI 2.0</h1>
             <div id="top-categories">
               <h2>Top Categories</h2>
-                <div class="category-buttons">
-                  <a class="btn-floating halfway-fab waves-effect waves-light red" href="/wiki"><i class="material-icons">launch</i></a>
-                  <a class="btn-floating halfway-fab waves-effect waves-light red" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a>
-                  <a class="btn-floating halfway-fab waves-effect waves-light red" href="/wiki/tech/show"><i class="material-icons">code</i></a>
-                  <a class="btn-floating halfway-fab waves-effect waves-light red" href="/wiki/travel/show"><i class="material-icons">my_location</i></a>
+                <div class="fixed-action-btn horizontal click-to-toggle">
+                  <a class="btn-floating btn-large red">
+                    <i class="material-icons">menu</i>
+                  </a>
+                  <ul>
+                    <li><a class="btn-floating halfway-fab waves-effect waves-light red" href="/wiki"><i class="material-icons">launch</i></a></li>
+                    <li><a class="btn-floating halfway-fab waves-effect waves-light red" href="/wiki/style/show"><i class="material-icons">shopping_basket</i></a></li>
+                    <li><a class="btn-floating halfway-fab waves-effect waves-light red" href="/wiki/tech/show"><i class="material-icons">code</i></a></li>
+                    <li><a class="btn-floating halfway-fab waves-effect waves-light red" href="/wiki/travel/show"><i class="material-icons">my_location</i></a></li>
+                  </ul>
                 </div>
             </div>
         </div>
@@ -66,6 +71,8 @@
                 <p>Title:<%= wiki.title %></p>
                 <p>Category:<%= wiki.category %></p>
                 <p>Content:<%= wiki.content %></p>
+                <p>Created At:<%= wiki.date_created %></p>
+
             </div>
           <% }) %>
 <!-- Below is the input (search bar) and the submit button -->
