--- a/wiki-project/public/css/style.css
+++ b/wiki-project/public/css/style.css
@@ -16,3 +16,73 @@
 .index-column3 {
   display:3;
 }
+
+img {
+  width: 70%;
+  height: 70%;
+}
+
+.nav-wrapper {
+  /*background-color: */
+  font-size: 20px;
+  font-color:black;
+  align-items:center;
+}
+
+a {
+  text-decoration: none
+  /*color:#212121;*/
+}
+
+ul {
+  list-style-type: none;
+}
+
+#search {
+  width:50%;
+  height:100%;
+}
+
+.show-body {
+  display:block;
+  flex-direction:row;
+  justify-content: center;
+}
+#show-nav {
+  display:1;
+  text-align:left;
+  padding-top:50px;
+  justify-content:space-around;
+}
+
+.show-input {
+  text-align:center;
+  display:2;
+  padding-top:50px;
+  /*border:solid;*/
+  border-color:black;
+  width:100%;
+  height:500px;
+  /*background-color:red;*/
+  align-items: center;
+}
+
+.col s3 {
+  background-color: red;
+}
+
+.col s9 {
+  background-color:blue;
+}
+
+#style-page-heading {
+  background-color: black;
+}
+
+.style-heading {
+  background-color:#e0e0e0;
+  color:black;
+  width:100%;
+  height:50px;
+  text-align:center;
+}
