--- a/wiki-project/views/wiki/new.ejs
+++ b/wiki-project/views/wiki/new.ejs
@@ -35,17 +35,19 @@
             <h1>ADD NEW WIKI POST</h1>
           </header>
           <section>
-          <form action="/wiki" method="POST">
+          <form action="/wiki" method="POST" id="new-form">
             <!-- <label for="wiki[title]">POST Title:</label><br> -->
             <input type="text" name="wiki[title]" placeholder="Post Title!"><br>
             <select name="wiki[category]">
               <option name="wiki[category.food]">food</option>
               <option name="wiki[category.tech]">tech</option>
               <option name="wiki[category.style]">style</option>
-              <option name="wiki[category.travel]">Travel</option>
+              <option name="wiki[category.travel]">travel</option>
             </select>
             <input type="text" name="wiki[content]" placeholder="Insert Content!"><br>
-            <!-- <input type="text" name="wiki[date_created]" placeholder="Date Created!"><br> -->
+            <!-- <input type="hidden" value="" name="wiki[date_created]"><br> -->
+
+            <!-- <input type="hidden" value="" name="wiki[date_created]"><br> -->
             <!-- <input type="text" name="wiki[date_updated]" placeholder="Date Updated!"><br> -->
             <input type="submit" value="ADD NEW POST">
           </form>
