--- a/wiki-project/views/wiki/show.ejs
+++ b/wiki-project/views/wiki/show.ejs
@@ -18,22 +18,47 @@
       <script src="/js/app.js"></script>
   </head>
   <body>
-    <nav>
-    </nav>
+    <div class="show-body">
+
+      <ul id="dropdown1" class="dropdown-content">
+        <li><a href="/wiki">launch</a></li>
+        <li><a href="/wiki/style/show">style</a></li>
+        <li><a href="/wiki/travel/show">travel</a></li>
+      </ul>
+      <nav>
+        <div class="nav-wrapper">
+            <a href="#!">Pitch!</a>
+          <ul class="right hide-on-med-and-down">
+            <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Categories<i class="material-icons right">arrow_drop_down</i></a></li>
+          </ul>
+        </div>
+      </nav>
+    <div id="show-nav" class="nav-wrapper">
+      <div class="style-heading">
+        <!-- <div class="fixed-action-btn click-to-toggle"> -->
+          <!-- <a class="btn-floating btn-large red"> -->
+            <!-- <i class="material-icons">menu</i> -->
+          <!-- </a> -->
+      <!-- </div> -->
+       </div>
+      </nav>
+    <div class="row">
     <!-- <div class="container"> -->
-      <div class="row">
-<!--Below is col s12 m4 l2 - The fist column on the new page-->
-        <div class="col s12 m4 l2">
+      <div class="col s12">
+      <div class="show-input">
+        <div class="row container">
           <!-- <%= wiki.category %> -->
           <% wiki.forEach(wiki => { %>
-            <p>Title:<%= wiki.title %></p>
-            <p>Content:<%= wiki.content %></p>
-            <p>Date Created:<%= wiki.date_created %></p>
+            <p class="grey-text text-darken-3 lighten-3">Title:<%= wiki.title %></p>
+            <p class="grey-text text-darken-3 lighten-3">Content:<%= wiki.content %></p>
+            <p class="grey-text text-darken-3 lighten-3">Date Created:<%= wiki.date_created %></p>
             <% }) %>
-          <h1>WIKI SHOW PAGE</h1>
+          </div>
         </div>
-<!-- Below is the ending div for the row -->
       </div>
+    </div>
+
+<!-- Below is the ending div for the row -->
     </div>
   </body>
 </html>
