--- a/wiki-project/views/wiki/show.ejs
+++ b/wiki-project/views/wiki/show.ejs
@@ -20,39 +20,41 @@
   <body>
     <div class="show-body">
 
-      <ul id="dropdown1" class="dropdown-content">
-        <li><a href="/wiki">launch</a></li>
-        <li><a href="/wiki/style/show">style</a></li>
-        <li><a href="/wiki/travel/show">travel</a></li>
-      </ul>
       <nav>
         <div class="nav-wrapper">
-            <a href="#!">Pitch!</a>
-          <ul class="right hide-on-med-and-down">
-            <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Categories<i class="material-icons right">arrow_drop_down</i></a></li>
+          <div class="hide-on-small-only">
+          <ul id="dropdown1" class="dropdown-content">
+            <li><a href="/wiki">launch</a></li>
+            <li><a href="/wiki/style/show">style</a></li>
+            <li><a href="/wiki/travel/show">travel</a></li>
           </ul>
+            <!-- <a href="#!">Pitch!</a> -->
+          <ul class="right hide-on-med-and-down">
+            <li><a class="dropdown-button" href="#!" data-activates="dropdown1">CATEGORIES<i class="material-icons right">arrow_drop_down</i></a></li>
+          </ul>
+          </div>
         </div>
       </nav>
-    <div id="show-nav" class="nav-wrapper">
-      <div class="style-heading">
-        <!-- <div class="fixed-action-btn click-to-toggle"> -->
-          <!-- <a class="btn-floating btn-large red"> -->
-            <!-- <i class="material-icons">menu</i> -->
-          <!-- </a> -->
-      <!-- </div> -->
-       </div>
-      </nav>
+      <div class="page-name">Pitch'd: Style</div>
+      <div class="style-heading"></div>
     <div class="row">
     <!-- <div class="container"> -->
       <div class="col s12">
+        <div class="card">
       <div class="show-input">
         <div class="row container">
+           <div class="card-panel">
           <!-- <%= wiki.category %> -->
           <% wiki.forEach(wiki => { %>
-            <p class="grey-text text-darken-3 lighten-3">Title:<%= wiki.title %></p>
-            <p class="grey-text text-darken-3 lighten-3">Content:<%= wiki.content %></p>
-            <p class="grey-text text-darken-3 lighten-3">Date Created:<%= wiki.date_created %></p>
+            <div class="card-content">
+            <span class="white-text">Title:<%= wiki.title %></span>
+            </div>
+            <div class="card-reveal">
+              <!-- <span class="card-title grey-text text-darken-4"> -->
+              <span class="card-title grey-text text-darken-4">Content:<%= wiki.content %></span>
+              <span class="white-text">Date Created:<%= wiki.date_created %></span>
             <% }) %>
+           </div>
           </div>
         </div>
       </div>
