--- a/wiki-project/views/wiki/edit.ejs
+++ b/wiki-project/views/wiki/edit.ejs
@@ -4,25 +4,21 @@
       <meta charset="utf-8">
 
       <!--Mobile Device Optimization -->
-      <meta name="viewport" content="width-device-width, initial-scale=1.0"/>
+      <!-- <meta name="viewport" content="width-device-width, initial-scale=1.0"/> -->
 
       <title>Wiki 2.0!</title>
 
       <!-- Materialize CSS Links -->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link rel="stylesheet" href="libraries/materialize/css/materialize.min.css" />
-
       <!-- App Styles -->
-      <link rel="stylesheet" href="css/style.css" />
-
+      <link rel="stylesheet" href="/css/style.css" />
       <!-- jQuery -->
-      <script src="libraries/jquery/jquery.min.js"></script>
-
+      <script src="/libraries/jquery/jquery.min.js"></script>
       <!-- Materialize JS -->
-      <script src="libraries/materialize/js/materialize.min.js"></script>
-
-      <!-- Application JS  -->
-      <script src="js/app.js"></script>
+      <script src="/libraries/materialize/js/materialize.min.js"></script>
+      <!-- Application JS -->
+      <script src="/js/app.js"></script>
   </head>
   <body>
     <nav>
@@ -59,7 +55,7 @@
               </div>
       </div>
       <div class="card-action">
-        <button class="waves-effect waves-light btn">Submit Edit!</button>
+        <button class="waves-effect waves-light btn" href="wiki">Submit Edit!</button>
       </div>
     </div>
   </form>
